--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Home --- MN-Site</title>
 </head>
-<link rel="stylesheet" type="text/css" href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\style.css">
+
 <body>
 /*Selector {
   property: value;
@@ -112,9 +112,9 @@ footer {
 
 </style>
 	<div class="topnav">
-  <a class="active" href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site.html">Home</a>
-  <a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site-who-are-we.html">Who are we?</a>
-  <a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site-contact-us.html">Contact</a>
+  <a class="active" href="index.html">Home</a>
+  <a href="mn-site-chatbot.html">Who are we?</a>
+  <a href="mn-site-contact-us.html">Contact</a>
   <a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\blog-scroll.html">Blog Scroll</a>
  </div>
 
@@ -129,7 +129,7 @@ footer {
 </a>
 </div>
 <br /><hr />
-<footer><a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site-chatbot.html">Instead you can talk to our new developing chatbot!</a></footer>
+<footer><a href="mn-site-chatbot.html">Instead you can talk to our new developing chatbot!</a></footer>
 </body>
 </div>
 </html>
