--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@ footer {
 </style>
 	<div class="topnav">
   <a class="active" href="index.html">Home</a>
-  <a href="mn-site-chatbot.html">Who are we?</a>
+  <a href="mn-site-who-are-we.html">Who are we?</a>
   <a href="mn-site-contact-us.html">Contact</a>
-  <a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\blog-scroll.html">Blog Scroll</a>
+  <a href="blog-scroll.html">Blog Scroll</a>
  </div>
 
 <div style="padding-left:16px">
@@ -124,7 +124,7 @@ footer {
 	<h1><i>  Home</i></h1>
 						<hr>
 	<p>Blogs Below!</p>
-  <div class="boxed"><a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\blog.html">
+  <div class="boxed"><a href="blog.html">
   A Three Day Trip to Chikmagalur! My experience!!
 </a>
 </div>
