--- a/mn-site-chatbot.html
+++ b/mn-site-chatbot.html
@@ -120,10 +120,10 @@ body{
 </head>
 <body>
     <div class="topnav">
-  <a  href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site.html">Home</a>
-  <a class="active" href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site-who-are-we.html">Who are we?</a>
-  <a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site-contact-us.html">Contact</a>
-    <a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\blog-scroll.html">Blog Scroll</a>
+  <a  href="index.html">Home</a>
+  <a href="mn-site-who-are-we.html>Who are we?</a>
+  <a href="mn-site-contact-us.html">Contact</a>
+    <a href="blog-scroll.html">Blog Scroll</a>
   
 </div>
     <div class="box">
