--- a/mn-site-contact-us.html
+++ b/mn-site-contact-us.html
@@ -77,10 +77,10 @@
 		}
 </style>
 <div class="topnav">
-  <a  href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site.html">Home</a>
-  <a  href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site-who-are-we.html">Who are we?</a>
-  <a class="active" href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site-contact-us.html">Contact</a>
-    <a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\blog-scroll.html">Blog Scroll</a>
+  <a  href="index.html">Home</a>
+  <a  href="mn-site-who-are-we.html">Who are we?</a>
+  <a class="active" href="mn-site-contact-us.html">Contact Us</a>
+    <a href="blog-scroll.html">Blog Scroll</a>
  
 </div>
 <br><br><br><hr><br>
@@ -89,9 +89,9 @@
 <br>
 <h3>email: manashwin.nelluri@gmail.com || Number : N/A</h3>
 <br><hr />
-<a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site-chatbot.html">Instead you can talk to our new developing chatbot!</a>
+<a href="mn-site-chatbot.html">Instead you can talk to our new developing chatbot!</a>
 <br><hr />
-		<a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site.html">Want to go back to home to see some cool stuff? Click Here!</a>
+		<a href="index.html">Want to go back to home to see some cool stuff? Click Here!</a>
 
 </body>
 </html>
