--- a/blog.html
+++ b/blog.html
@@ -83,10 +83,10 @@ h1 {
 
 
 <div class="topnav">
-  <a  href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site.html">Home</a>
-  <a  href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site-who-are-we.html">Who are we?</a>
-  <a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site-contact-us.html">Contact</a>
-  <a class="active" href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\blog-scroll.html">Blog Scroll</a>
+  <a  href="index.html">Home</a>
+  <a  href="mn-site-who-are-we.html">Who are we?</a>
+  <a href="mn-site-contact-us.html">Contact</a>
+  <a class="active" href="blog-scroll.html">Blog Scroll</a>
  
 </div>
 <div style="padding-left:16px">
