--- a/blog-scroll.html
+++ b/blog-scroll.html
@@ -76,10 +76,10 @@ h4	{
 }
 </style>
 <div class="topnav">
-  <a  href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site.html">Home</a>
-  <a  href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site-who-are-we.html">Who are we?</a>
-  <a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site-contact-us.html">Contact</a>
-    <a class="active" href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\blog-scroll.html">Blog Scroll</a>
+  <a  href="index.html">Home</a>
+  <a  href="mn-site-who-are-we.html">Who are we?</a>
+  <a href="mn-site-contact-us.html">Contact</a>
+    <a class="active" href="blog-scroll.html">Blog Scroll</a>
 </div>
     <br />
     <br />
@@ -92,7 +92,7 @@ h4	{
     <br />
     <hr />
     <br />
-      <div class="boxed"><a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\blog.html">
+      <div class="boxed"><a href="blog.html">
   A Three Day Trip to Chikmagalur! My experience!!
 </a>
 </div>
