--- a/mn-site-chatbot.html
+++ b/mn-site-chatbot.html
@@ -121,7 +121,7 @@ body{
 <body>
     <div class="topnav">
   <a  href="index.html">Home</a>
-  <a href="mn-site-who-are-we.html>Who are we?</a>
+  <a href="mn-site-who-are-we.html">Who are we?</a>
   <a href="mn-site-contact-us.html">Contact</a>
     <a href="blog-scroll.html">Blog Scroll</a>
   
