--- a/mn-site-contact-us.html
+++ b/mn-site-contact-us.html
@@ -91,7 +91,7 @@
 <br><hr />
 <a href="mn-site-chatbot.html">Instead you can talk to our new developing chatbot!</a>
 <br><hr />
-		<a href="index.html">Want to go back to home to see some cool stuff? Click Here!</a>
+		<a href="index.html">Wwant to go back to home to see some cool stuff? Click Here!</a>
 
 </body>
 </html>
