--- a/mn-site-who-are-we.html
+++ b/mn-site-who-are-we.html
@@ -81,10 +81,10 @@
 
 	</style>
 	<div class="topnav">
-  <a  href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site.html">Home</a>
-  <a class="active" href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site-who-are-we.html">Who are we?</a>
-  <a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site-contact-us.html">Contact</a>
-    <a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\blog-scroll.html">Blog Scroll</a>
+  <a  href="index.html">Home</a>
+  <a class="active" href="mn-site-who-are-we.html">Who are we?</a>
+  <a href="mn-site-contact-us.html">Contact</a>
+    <a href="blog-scroll.html">Blog Scroll</a>
   
 </div>
 
@@ -97,8 +97,8 @@
 		<h3>Hello Everyone! Thank you for coming to our website. I am Manashwin Nelluri, I'm 12 Years old (As of 2021). I've created a website for good blogs... I am still constructing this website. It's not fully functional but I am developing it currently!</h6>
 		</h3>
 <br><hr />
-		<a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site.html">Want to go back to home to see some cool stuff? Click Here!</a>
+		<a href="index.html">Want to go back to home to see some cool stuff? Click Here!</a>
 		<br /><hr />
-<footer><a href="C:\Users\MANU  TWINKLE\OneDrive\Documents\MN-site-html-css-js\mn-site-chatbot.html">Instead you can talk to our new developing chatbot!</a></footer>
+<footer><a href="mn-site-chatbot.html">Instead you can talk to our new developing chatbot!</a></footer>
 	</body>
 </html>
