--- a/mn-site-chatbot.html
+++ b/mn-site-chatbot.html
@@ -163,5 +163,10 @@ function talk(){
     }
 }
     </script>
+    <hr />
+    <a href="index.html">Want to go back to home to see some cool stuff? Click Here!</a>
+    <hr />
+   
+    
 </body>
 </html>
