Changed the link!

--- a/mn-site-who-are-we.html
+++ b/mn-site-who-are-we.html
@@ -97,7 +97,7 @@
 		<h3>Hello Everyone! Thank you for coming to our website. I am Manashwin Nelluri, I'm 12 Years old (As of 2021). I've created a website for good blogs... I am still constructing this website. It's not fully functional but I am developing it currently!</h6>
 		</h3>
 <br><hr />
-		<a href="index.html">Want to go back to home to see some cool stuff? Click Here!</a>
+		<a href="index.html">Wwant to go back to home to see some cool stuff? Click Here!</a>
 		<br /><hr />
 <footer><a href="mn-site-chatbot.html">Instead you can talk to our new developing chatbot!</a></footer>
 	</body>
