--- a/mn-site-chatbot.html
+++ b/mn-site-chatbot.html
@@ -159,7 +159,7 @@ function talk(){
     if(user in know){
         document.getElementById('chatLog').innerHTML = know[user] + "<br>";
     }else{
-        document.getElementById('chatLog').innerHTML = "I do not understand .";
+        document.getElementById('chatLog').innerHTML = "Sorry! I am learning how to talk English! What did you say?";
     }
 }
     </script>
