--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <div class= "elements">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Home --- MN-Site</title>
 </head>
 
